to the Rgui Help | Manuals menu list.

The way the command history works has been changed to be more like
readline.  All the commands used in a session are kept, but only the
last R_HISTSIZE (default 512) lines are saved.  The environment variable
R_HISTSIZE can be changed during the session (by Sys.putenv) as the
current value is used.



R 2.0.1 patched
===============

We work around reported bugs in Windows XP as to which characters are
printable by attempting to print all non-control characters when using
print().

There are now facilities (documented in file src/gnuwin32/INSTALL) to
add packages when building the R installer, and to rebuild a
customized installer from the existing binary distribution.

Tcl/Tk could crash Rgui during shutdown by trying to print an error
message after the console had been shut down.  Such messages are now
redirected to message boxes.

bug.report() failed to open the internal editor.  We have changed it
to use file.edit() to edit the report, with the consequence that there
is no longer a "wait" parameter.



R 2.0.1
=======

There is a new menu item to set a CRAN mirror.

Bug fixes
---------

jpeg(), png() and bmp() were not handling background colours properly.

It seems that on some systems (but not the maintainers') Mozilla 1.7.3
requires \ not / in filepaths, so help(topic, htmlhelp=TRUE) now uses
\.  (PR#7269)  Hopefully no system requires / not \ !

Changes to help() meant that help(topic, chmhelp=TRUE) was no longer
working if `topic' was an alias.  (PR#7269)

Recent changes caused (D)COM to sometimes go into infinite loops.

Any change in the GUI preferences via the dialog box changed font
(even if to the same font as before).  This is causing problems in MDI
mode with toolbars (PR#7277), where real font changes are not working
properly.

Control keys in Tcl/Tk windows were not handled properly; Tcl/Tk
interacted badly with Rgui in other ways as well.
